Html e Css finalizado

--- a/Front_end/TelaPaciente.html
+++ b/Front_end/TelaPaciente.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sp Medical Adm</title>
+    <title>Sp Medical Paciente</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body class="container_fundotab">
     <header>
         <div class="container container_header">
-
                 <img class="logo" src="img/logo1.png" alt="logo">
             <div class="container_final_header">
-                <h1>Administrador</h1>
+                <h1>Paciente</h1>
                 <input class="img_sair" type="image" src="img/SairBranco.png" alt="Sair">
             </div>
         </div>
@@ -27,7 +26,6 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Consulta</th>
                             <th>Nome</th>
                             <th>Medico</th>
                             <th>Descriçao</th>
@@ -37,7 +35,6 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>#</td>
                             <td>Nome</td>
                             <td>NomeM</td>
                             <td>Text</td>
@@ -48,17 +45,6 @@
                     </tbody>
                 </table>
             </div>
-            <form class="container_cadastrar">
-                <div>
-                    <input class="input_cad" type="text" name="Nome" placeholder="Nome">
-                    <input class="input_cad" type="text" name="Medico" placeholder="Medico">
-                </div>
-                <div>
-                    <input class="input_cad" type="text" name="Situaçao" placeholder="Situaçao">
-                    <input class="input_cad_data" type="date" name="Data" placeholder="dd/mm/aaaa">
-                    <button class="input_cad_button" type="submit" name="Cadastrar">Cadastrar</button>
-                </div>
-            </form>
 
         </div>
 
