--- a/Front_end/TelaMedico.html
+++ b/Front_end/TelaMedico.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sp Medical Adm</title>
+    <title>Sp Medical Medico</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body class="container_fundotab">
     <header>
         <div class="container container_header">
-
+            <div class="container_logo">
                 <img class="logo" src="img/logo1.png" alt="logo">
+            </div>
             <div class="container_final_header">
-                <h1>Administrador</h1>
+                <h1>Medico</h1>
                 <input class="img_sair" type="image" src="img/SairBranco.png" alt="Sair">
             </div>
         </div>
@@ -48,16 +49,11 @@
                     </tbody>
                 </table>
             </div>
-            <form class="container_cadastrar">
-                <div>
-                    <input class="input_cad" type="text" name="Nome" placeholder="Nome">
-                    <input class="input_cad" type="text" name="Medico" placeholder="Medico">
-                </div>
-                <div>
-                    <input class="input_cad" type="text" name="Situaçao" placeholder="Situaçao">
-                    <input class="input_cad_data" type="date" name="Data" placeholder="dd/mm/aaaa">
+            <form>
+                    <input class="input_cad" type="text" name="Consulta" placeholder="Consulta">
+                    <input class="input_cad" type="text" name="Situação" placeholder="Situação">
                     <button class="input_cad_button" type="submit" name="Cadastrar">Cadastrar</button>
-                </div>
+
             </form>
 
         </div>
